rename appCode, applicationCode to system
